k8s/patient-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
spec:
  replicas: 2

  selector:
    matchLabels:
      app: patient-service

  template:
    metadata:
      labels:
        app: patient-service

    spec:
      containers:
      - name: patient-service

        image: asia-south1-docker.pkg.dev/motocorp-simon/microservices-repo/patient-service:latest

        ports:
        - containerPort: 3000
