k8s/patient-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service

spec:
  selector:
    app: patient-service

  ports:
  - port: 80
    targetPort: 3000

  type: ClusterIP
