k8s/patient-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: patient-service-ingress
  annotations:
    spec.ingressClassName: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: patient-service
            port:
              number: 80
